--- a/app/src/main/res/values/string_list.xml
+++ b/app/src/main/res/values/string_list.xml
@@ -21,5 +21,6 @@
     <item>Germany 2006</item>
     <item>South africa 2010</item>
     <item>Brazil 2014</item>
+    <item>Russia 2018</item>
   </string-array>
 </resources>
